# papi

./: .gitignore  README.md  create-toggl-project.py  pyproject.toml  pytest.ini  requirements.txt  temp.py
papi/: __init__.py  mocks.py  project.py  task.py  user.py  workorder.py  wrappers.py
papi/tests/: test_project.py  test_user.py  test_userdb.json  test_wrappers.py
scripts/: collate_toggl_hours.py  collatetogglhours.py  create_notion_project.py  create_notion_task.py  create_project.py  create_toggl_project.py  createtogglproject.py  generate_timesheet.py  test_notion.py
tests/: test_project.py  test_task.py  test_user.py  test_userdb.json  test_wrappers.py
