[project]
name = "papi-projects"
version = "0.4.0"
description = "PAPI is an API for managing projects"
authors = [{ name = "sandyjmacdonald", email = "sandyjmacdonald@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pendulum>=3.0.0",
    "httpx>=0.27.2",
    "tinydb>=4.8.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
create-project = "scripts.create_project:main"
create-toggl-project = "scripts.create_toggl_project:main"
create-notion-project = "scripts.create_notion_project:main"
create-notion-task = "scripts.create_notion_task:main"
collate-toggl-hours = "scripts.collate_toggl_hours:main"
generate-timesheet = "scripts.generate_timesheet:main"

# Tell setuptools exactly which packages to ship
[tool.setuptools]
packages = ["papi", "scripts"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
